crates/alder-parse/src/snapshots/alder_parse__type___tests__error_fn_missing_ret.snap
---
source: crates/alder-parse/src/type_.rs
description: fn(a)
---
Fn(
    Ret(
        Start(
            1,
            6,
        ),
        1,
        6,
    ),
    1,
    1,
)
