crates/alder-parse/src/snapshots/alder_parse__type___tests__error_fn_param_end.snap
---
source: crates/alder-parse/src/type_.rs
description: fn(a b) c
---
Fn(
    ParamEnd(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 3,
            },
            boundary: Position {
                line: 1,
                column: 5,
            },
            unexpected: Position {
                line: 1,
                column: 6,
            },
        },
    ),
    1,
    1,
)
