crates/alder-parse/src/snapshots/alder_parse__type___tests__error_path_dangling.snap
---
source: crates/alder-parse/src/type_.rs
description: "Option::"
---
PathMember(
    1,
    9,
)
