crates/alder-parse/src/snapshots/alder_parse__type___tests__error_path_lower_member.snap
---
source: crates/alder-parse/src/type_.rs
description: "Option::foo"
---
PathMember(
    1,
    9,
)
