crates/alder-parse/src/snapshots/alder_parse__type___tests__error_record_ext_no_fields.snap
---
source: crates/alder-parse/src/type_.rs
description: "{ r | }"
---
Record(
    ExtField(
        1,
        7,
    ),
    1,
    1,
)
