crates/alder-parse/src/snapshots/alder_parse__type___tests__error_record_field.snap
---
source: crates/alder-parse/src/type_.rs
description: "{ Name: String }"
---
Record(
    Field(
        1,
        3,
    ),
    1,
    1,
)
