crates/alder-parse/src/snapshots/alder_parse__type___tests__error_record_missing_colon.snap
---
source: crates/alder-parse/src/type_.rs
description: "{ name String }"
---
Record(
    Colon(
        1,
        8,
    ),
    1,
    1,
)
