crates/alder-parse/src/snapshots/alder_parse__type___tests__error_record_optional_after_space.snap
---
source: crates/alder-parse/src/type_.rs
description: "{ nickname ?: String }"
---
Record(
    Colon(
        1,
        12,
    ),
    1,
    1,
)
