crates/alder-parse/src/snapshots/alder_parse__type___tests__error_record_optional_after_space_second_field.snap
---
source: crates/alder-parse/src/type_.rs
description: "{ id: Id, nickname ?: String }"
---
Record(
    Colon(
        1,
        20,
    ),
    1,
    1,
)
