crates/alder-parse/src/snapshots/alder_parse__type___tests__error_record_unclosed.snap
---
source: crates/alder-parse/src/type_.rs
description: "{ name: String"
---
Record(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 15,
            },
            unexpected: Position {
                line: 1,
                column: 15,
            },
        },
    ),
    1,
    1,
)
