crates/alder-parse/src/snapshots/alder_parse__type___tests__error_reserved.snap
---
source: crates/alder-parse/src/type_.rs
description: match
---
Reserved(
    Match,
    1,
    1,
)
